Sun Dec 22 16:11:09 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libdwarf/dwarf_pro_lineno.c (dwarf_add_line_entry): Don't do a
	NULL pointer dereference when dwarf_lne_set_address hasn't been called
	before.

Sun Dec 22 16:03:36 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libdwarf/libdwarf_elf_init.c (_dwarf_elf_init): Avoid calling malloc
	for 0 byte allocation.
	* libdwarf_lineno.c (_dwarf_lineno_init): Likewise.
	* libdwarf_loclist.c (_dwarf_loclist_add): Likewise.
	* libdwarf/libdwarf_ranges.c (_dwarf_ranges_add): Likewise.

Sun Dec 22 15:53:47 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libdwarf/libdwarf_arange.c (_dwarf_arange_init): Fix wrong amount
	of heap memory allocation storing for Dwarf_Arange data.
	* libdwarf/dwarf_lineno.c (dwarf_srclines): Fix wrong amount of heap
	memory allocation for storing Dwarf_Line data.

Sun Dec 22 14:05:09 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libelf/_libelf.h (_libelf_release_data,_libelf_release_elf,
	_libelf_release_scn): Drop the NULL pointer return value.  Using that
	value for local variable assignment results in "dead assignment"
	compiler warnings.
	* libelf/libelf_allocate.c: Follow.
	* libelf/elf_data.c: Likewise.
	* libelf/elf_end.c: Likewise.
	* libelf/libelf_memory.c: Likewise.

Fri Dec 20 23:10:37 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/m4: Add empty directory.

Fri Dec 20 22:56:14 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	Automake 1.13 fixes:
	* current-trunk (svn:ignore): Add compile and ar-lib.
	* current-trunk/configure.ac (AM_INIT_AUTOMAKE): Drop -Werror.
	(AM_PROG_CC_C_O): Add.
	(LT_INIT): Move after AC_PROG/AM_PROG tests.

	* current-trunk/libdwarf/GNUmakefile.am: Avoid GNU makefile specific
	feature use.
	* current-trunk/libelf/GNUmakefile.am: Likewise.

Fri Dec 20 20:14:52 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.
